# SimpleCommunicationStack

./: CMakeLists.txt
Application/Esp8266Client/: EspMain.cpp
Application/LinuxClient/: ClientMain.cpp
Application/LinuxServer/: ServerMain.cpp
Application/Server/: MessageRouter.cpp  MessageRouter.hpp
Applikation/Server/src/: MessageRouter.cpp  MessageRouter.hpp
BuildProperties/Esp8266/: CMakeLists.txt  arduino.cmake  esp8266.cmake
BuildProperties/Linux/: CMakeLists.txt
Client/src/: CMakeLists.txt  ClientMain.cpp
Common/: BlackChannel.hpp  CabinSupervisorProt.hpp  ClientManager.cpp  ClientManager.hpp  ClimateManager.cpp  ClimateManager.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  ConnectionHandler.cpp  ConnectionHandler.hpp  ConnectionManager.cpp  ConnectionManager.hpp  CspHandler.cpp  CspHandler.hpp  MessageRouter.cpp  MessageRouter.hpp  Notifications.cpp  Notifications.hpp  NotificationsIf.hpp  StorageManager.cpp  StorageManager.hpp
Common/Export/: ConnectionIf.hpp  NotificationSubscriberIf.hpp  NotificationsIf.hpp  TemperatureIf.hpp
Platform/Esp8266Client/: ConnectionEsp8266.cpp  ConnectionEsp8266.hpp  ConnectionHandlerEsp8266.cpp  ConnectionHandlerEsp8266.hpp  Temperature.cpp  Temperature.hpp
Platform/LinuxClient/: ConnectionHandlerLinuxClient.cpp  ConnectionHandlerLinuxClient.hpp  ConnectionLinuxClient.cpp  ConnectionLinuxClient.hpp
Platform/LinuxServer/: ConnectionHandlerLinuxServer.cpp  ConnectionHandlerLinuxServer.hpp  ConnectionLinuxServer.cpp  ConnectionLinuxServer.hpp  Time.cpp  Time.hpp
Platform/export/: ConnectionHandlerIf.hpp
Server/src/: CMakeLists.txt  ServerMain.cpp
TestClient/src/: CMakeLists.txt  ClientMain.cpp
TestServer/src/: CMakeLists.txt  ServerMain.cpp
common/: CabinSupervisorProt.hpp  ConnectionHandler.cpp  ConnectionHandler.hpp
